--- a/page.css
+++ b/page.css
@@ -8,6 +8,17 @@ body {
     /* testing */
 }
 
+.judul {
+    background-color: aqua;
+    color: bisque;
+}
+
+#botol {
+    background-color:brown;
+    
+
+}
+
 
 
 
