--- a/page.css
+++ b/page.css
@@ -39,13 +39,13 @@ div .cull .vanness{
     justify-content: center;
 }
 .bg-colornavbar{
-    background-color: #CBAD8D;
+    background-color: #ECE3D3;
 }
 .marginleft{
     margin-left: 25px;
 }
 .fontnavbar{
-    color:#3A2D28
+    color:#41352B
 }
 
 
