--- a/page.css
+++ b/page.css
@@ -36,16 +36,22 @@ div .cull .vanness{
 }
 
 .newrelease{
+    display:flex;
     justify-content: center;
+    align-items: center;
 }
 .bg-colornavbar{
-    background-color: #CBAD8D;
+    background-color: #F5F4E8;
 }
-.marginleft{
-    margin-left: 25px;
+.ml{
+    margin-left:5px
+}
+.mlpt{
+    margin-left: 15px;
+    padding-top:7px;
 }
 .fontnavbar{
-    color:#3A2D28
+    color:#41352B
 }
 
 
@@ -74,43 +80,7 @@ div .cull .vanness{
     transform: scale(1.05); 
 }
 
-/* 🤵🏻‍♂️desmond's css */
-.usp-container {
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
 
-.usp-contents {
-    display: flex;
-    justify-content: space-around;
-
-}
-
-.usp-solo {
-    display: flex;
-    align-items: baseline;
-    color: #CBAD8D;
-    font-size: 32px;
-}
-
-.usp-3 {
-    align-items: flex-start;
-    
-}
-
-#no-margin {
-    margin: 0px;
-}
-
-.usp-icon {
-    margin: 6px;
-}
-
-#made-from-nature {
-    margin-top: 6px;
-}
 
 
 /* 👇🏻for mobile size */
