--- a/page.css
+++ b/page.css
@@ -54,8 +54,22 @@ div .cull .vanness{
     color:#41352B
 }
 
+.footer-logo{
+    width: 40px;
+    height: 40px;
+}
+.footer-heading{
+    margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 20px;
+}
 
-
+.footer-subheading{
+    margin-top: 0;
+  margin-bottom: 12px;
+  font-size: 16px;
+}
 
 
 
