--- a/page.css
+++ b/page.css
@@ -8,33 +8,6 @@ body {
     /* testing */
 }
 
-.judul {
-    background-color: aqua;
-    color: bisque;
-}
-
-#botol {
-    background-color:brown;
-    
-    
-}
-
-.judul2 {
-    background-color: blue;
-}
-
-.judul3 {
-    background-color: red;
-}
-
-h3 .judul2 .judul3 {
-    background-color: yellow;
-}
-
-div .cull .vanness{
-    background-color: yellow;
-}
-
 .newrelease{
     display:flex;
     justify-content: center;
@@ -54,6 +27,7 @@ div .cull .vanness{
     margin-left: 15px;
     padding-top:7px;
 }
+
 .fontnavbar{
     color:#41352B
 }
@@ -76,15 +50,9 @@ div .cull .vanness{
     padding-top:8px;
 }
 
-<<<<<<< Updated upstream
 footer {
     font-family: 'Playfair Display', sans-serif;  
     background-color: #b99984;
-=======
-
-#berightnavbar{
-    align-self: flex-end;
->>>>>>> Stashed changes
 }
 
 
@@ -117,11 +85,6 @@ footer {
 }
 
 
-
-<<<<<<< Updated upstream
-=======
-
->>>>>>> Stashed changes
 
 /* dcz is dacodaz generalised CSS rule */
 .dcz-shadow {
@@ -176,6 +139,32 @@ footer {
     margin-top: 6px;
 }
 
+.membership {
+    background-color: #F4F4E7;
+    height: 520px;
+}
+
+.membership-arc {
+    top: 50%; 
+    left: 50%; 
+    height: 260px; 
+    width: 100vw; 
+    border-radius: 0 0 100% 100%; 
+    background-color: #EEE3D0; 
+}
+
+.membership-title {
+    /* margin-top: -20px; */
+    display: flex;
+    justify-content: center;
+
+}
+
+.membership-text {
+    font-weight: 600;
+    font-size: 58px;
+    margin-top: 50px;
+}
 
 /* 👇🏻for mobile size */
 @media (max-width: 767px) {
