Faking Shopping Spree
lesgauuuuuuurrrrrr

--- a/page.css
+++ b/page.css
@@ -80,13 +80,7 @@ div .cull .vanness{
 .paddingtop{
     padding-top:8px;
 }
-.paddingbottom{
-    padding-bottom:65px;
-}
-.buttoncolor{
-    background-color:#41352B;
-    color:#F5F4E8;
-}
+
 
 
 .footer-logo{
@@ -106,26 +100,7 @@ div .cull .vanness{
   font-size: 16px;
 }
 
-footer {
-    font-family: 'Playfair Display', sans-serif;  
-    background-color: #b99984;
-}
 
-
-.footer-container{
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: space-evenly;
-
-}
-.footer-col{
-    width: 260;
-    padding-left: 10px;
-    padding-right: 10px;
-}
 
 
 
@@ -218,6 +193,71 @@ footer {
 
 }
 
+.sidenav2 {
+    position: sticky;
+    top: 10px;
+    background-color: rgb(215, 181, 126);
+    overflow-y: scroll;
+    padding-top: 10px;
+    float: left;
+    border-style: solid;
+    border-color: rgb(65, 53, 43);
+    border-radius: 15px;
+}
+
+.sidenav2::-webkit-scrollbar {
+    display: none;
+  }
+
+.sidenav2 a {
+    font-weight: bold;
+    padding: 5px 15px 10px 30px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #5c5c5c;
+    display: block;
+    background-image: linear-gradient(
+        to left,
+        #7473d4,
+        #7473d4 50%,
+        rgb(240, 243, 255) 50%
+    );
+    background-size: 200% 100%;
+    background-position: 0%;
+    background-clip: text;
+    transition: all 0.2s ease-in-out;
+}
+
+.sidenav2 a:hover {
+    background-position: -100%;
+    color: salmon;
+}
+
+.sidenav2 a:hover::before {
+    width: 100%;
+}
+ 
+.cards-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.products-section{
+    margin-top: 100px;
+}
+.chicken-gawing{
+    margin-left: 20px;
+}
+.solo-card{
+    display: flex;
+}
+.cards-title {
+    width: 100%;
+}
+.best-selling{
+    background-color:rgb(247, 214, 161);
+}
 
 
 /* ❤️made with love by dacodaz 13 Nov 2023 Hackathon SIM UOL CSSC 🎓 Desmond, Alex, Vanness, Fukutaro, Cull */
