--- a/page.css
+++ b/page.css
@@ -187,6 +187,45 @@ div .cull .vanness{
     margin-bottom: 24px;
 }
 
+footer {
+    font-family: 'Playfair Display', sans-serif;  
+    background-color: #b99984;
+    margin-bottom: -106px;
+}
+
+.footer-container{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    height: 400px;
+}
+
+.footer-col{
+    width: 260;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.footer-text{
+    display: flex;
+    justify-content: space-evenly;
+    opacity: 0.5;
+}
+
+.footer-links{
+    color: #41352B;
+    text-decoration: none;
+}
+
+.socmed-logo {
+    color: #41352B;
+    text-decoration: none;
+    font-size: 26px;
+}
+
 /* 👇🏻for mobile size */
 @media (max-width: 767px) {
 
