--- a/page.css
+++ b/page.css
@@ -3,6 +3,11 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
+
+.btn-primary{
+    background-color: #41352B;
+}
+
 .navbar {
     font-weight: 600;
     /* testing */
